@@ -50,7 +50,7 @@
           //servo
           'servo_move', 'servo_read_degrees',
           //grove analog
-          'grove_rotary_angle', 'grove_temporature_sensor', 'grove_sound_sensor',
+          'grove_rotary_angle', 'grove_temporature_sensor', 'grove_sound_sensor', 'grove_thumb_joystick',
           //grove
           'grove_led', 'grove_button', 'grove_relay',
           'grove_tilt_switch', 'grove_piezo_buzzer',
